--- a/source/Makefile
+++ b/source/Makefile
@@ -1,10 +1,6 @@
-dwecc: lexical.cpp parser.o 
-	g++ -std=c++11 lexical.cpp parser.o 
-	rm -f lexical.cpp parser.o 
-
-parser.o: parser.h 
-	g++ -c -std=c++11 parser.cpp 
-	rm parser.cpp parser.h 
+dwecc: lexical.cpp parser.h 
+	g++ -std=c++11 lexical.cpp parser.cpp parser.h -o dwecc 
+	rm -f lexical.cpp parser.cpp parser.h
 
 lexical.cpp: dwecpp_lex.l
 	flex -o lexical.cpp dwecpp_lex.l
